--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,5 +1,5 @@
 .contactHero {
-  background: linear-gradient(135deg, #0e206d, #b38ed8);
+  background: linear-gradient(135deg, #aa061c, #b38ed8);
   color: rgb(240, 231, 231);
   padding: 180px 0 100px;
   text-align: center;
